// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderNumberSearch QueryBuilderNumberSearch Component Display different placeholder for in/not in operators: Placeholder expected to be different for in operator. 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <input
        class="form-control"
        placeholder="Enter comma-separated values..."
        type="text"
        value="test"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderNumberSearch QueryBuilderNumberSearch Component Display different placeholder for in/not in operators: Placeholder expected to be different for not in operator. 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <input
        class="form-control"
        placeholder="Enter comma-separated values..."
        type="text"
        value="test"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderNumberSearch QueryBuilderNumberSearch Component Display field if match type is equals: Expect number field not to be displayed since the match type is not equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderNumberSearch QueryBuilderNumberSearch Component Display field if match type is equals: Expect number field to be displayed since match type is equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <input
        class="form-control"
        placeholder="Enter number search value..."
        type="number"
        value="test"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Edge cases If no field value is provided, nothing should be generated. 1`] = `{}`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Empty operation Normal field 1`] = `
{
  "bool": {
    "must_not": {
      "exists": {
        "field": "data.attributes.numberField",
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Empty operation With relationship as field 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "bool": {
                  "must": [
                    {
                      "exists": {
                        "field": "includes.name",
                      },
                    },
                    {
                      "term": {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Equals operation Normal field 1`] = `
{
  "term": {
    "data.attributes.numberField": "123",
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Equals operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "includes.name": "123",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Exact Match operation Normal field 1`] = `
{
  "term": {
    "data.attributes.numberField": "123",
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Exact Match operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "includes.name": "123",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Greater Than Or Equal To operation Normal field 1`] = `
{
  "range": {
    "data.attributes.numberField": {
      "gte": "123",
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Greater Than Or Equal To operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gte": "123",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Greater Than operation Normal field 1`] = `
{
  "range": {
    "data.attributes.numberField": {
      "gt": "123",
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Greater Than operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "gt": "123",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function In operation Normal field 1`] = `
{
  "bool": {
    "must": {
      "terms": {
        "data.attributes.numberField": [
          "1",
          "2",
          "3.5",
          "6",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Less Than operation Normal field 1`] = `
{
  "range": {
    "data.attributes.numberField": {
      "lt": "123",
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Less Than operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lt": "123",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Not Equals operation Normal field 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "term": {
              "data.attributes.numberField": "123",
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.numberField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Not Equals operation With relationship as field 1`] = `
{
  "bool": {
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "term": {
                  "includes.name": "123",
                },
              },
            },
          },
        },
      },
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": {
                "term": {
                  "included.type": "collection",
                },
              },
              "must_not": {
                "exists": {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Not empty operation Normal field 1`] = `
{
  "exists": {
    "field": "data.attributes.numberField",
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Not empty operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "includes.name",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Not in operation Normal field 1`] = `
{
  "bool": {
    "must_not": {
      "terms": {
        "data.attributes.numberField": [
          "1",
          "2",
          "3.5",
          "6",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function lessThanOrEqualTo operation Normal field 1`] = `
{
  "range": {
    "data.attributes.numberField": {
      "lte": "123",
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function lessThanOrEqualTo operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "range": {
              "includes.name": {
                "lte": "123",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;
